# vlsdk-demo-for-gumprodig

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
CMake/: AutoDetectWinTargetArch.cmake
Resources/: bosch_injected.vl
Resources/BoschWinkel/: trackingConfig.vl  trackingResults.json
Resources/Stopfen/: UVMappedStopfen_m.mtl  trackingConfig.vl  trackingResults.json
Source/: Extrinsic.cpp  Extrinsic.h  MultiViewDetector.cpp  MultiViewDetector.h  TrackingDemoMain.cpp
Source/Helpers/: CMakeLists.txt  DataProcessingHelpers.cpp  DataProcessingHelpers.h  ExtrinsicDataHelpers.cpp  ExtrinsicDataHelpers.h  GetJsonCommandResult.h  HelperFunctions.cpp  HelperFunctions.h  ImageHelpers.cpp  ImageHelpers.h  PointerHandler.h
Source/Visualization/: ResultVisualization.cpp  ResultVisualization.h
